--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "ad4bf435-d99b-4f81-b28c-8bf33408e014"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
